feat/analytics client and server done
